* 2013-05-29 - thorben.betten@open-xchange.com

 - Fix for bug 26838: Ignore file uploads during request watcher tracking

* 2013-05-28 - tobias.friedrich@open-xchange.com

 - Fix for bug 26807: Don't consider storage when checking for maximum allowed sessions
 - Fix for bug 26691: Modified error message in case of truncated fields

* 2013-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 26815: Don't interrupt appender task if not finished

* 2013-05-27 - thorben.betten@open-xchange.com

 - Fix for bug 26779: Reduce log level for htmlunit.jar

* 2013-05-27 - marcus.klein@open-xchange.com

 - US 47575615: Added interface method for counting tasks, using that for folder object count value and added the according acceptance test.

* 2013-05-26 - thorben.betten@open-xchange.com

 - Fix for bug 26737: Added update task to enlarge the UID field of calendar tables
 - Fix for bug 26781: Proper invocation of OXException constructor

* 2013-05-24 - thorben.betten@open-xchange.com

 - Fix for bug 26474: Avoid timeout through initiating 102 Processing interim responses
 - Fix for bug 26479: Accept multiple upload files associated with the same field name
 - Fix for bug 24519: Maintain inlined images during auto-save and forward/reply actions

* 2013-05-23 - thorben.betten@open-xchange.com

 - Fix for bug 26760: Fixed possible ArrayIndexOutOfBoundsException

* 2013-05-22 - marc.arens@open-xchange.com

 - Fix for bug 26580: Remove superfluous warning

* 2013-05-21 - marcus.klein@open-xchange.com

 - Fix for bug 26680: Moved filemanagement bundles into an own package open-xchange-file-distribution.
 
 * 2013-05-17 - marc.arens@open-xchange.com

 - Fix for bug 26226: Use concurrent data structures to prevent NegativeArraySizeException
 - Fix for bug 25944: GETS are now periodically closed by server pongs

* 2013-05-16 - marcus.klein@open-xchange.com

 - Fix for bug 26085: Disabling push UDP bundle by setting all push UDP related enabling properties to false.
