@@ -24,6 +24,7 @@ Import-Package: com.openexchange.ajax,
  com.openexchange.server,
  com.openexchange.server.impl,
  com.openexchange.session,
+ com.openexchange.sessiond,
  com.openexchange.threadpool,
  com.openexchange.timer,
  com.openexchange.tools,
