@@ -13,6 +13,7 @@ Import-Package: com.openexchange.config,
  com.openexchange.log,
  com.openexchange.osgi,
  com.openexchange.server,
+ com.openexchange.sessiond,
  com.openexchange.timer,
  javax.servlet,
  javax.servlet.http,
